buildscript {
    repositories {
        maven { url 'https://maven.fabric.io/public' }
    }

    dependencies {
        classpath 'io.fabric.tools:gradle:1.+'
    }
}

apply plugin: 'com.android.application'
apply plugin: 'io.fabric'
apply plugin: 'realm-android'


android {
    useLibrary 'org.apache.http.legacy'
    compileSdkVersion 26
    buildToolsVersion '27.0.3'
    defaultConfig {
        applicationId "ru.sedi.customer"
        minSdkVersion 17
        versionCode 115
        versionName "1.96"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }

    testOptions {
        unitTests {
            includeAndroidResources = true
        }
    }

    dexOptions {
        jumboMode true
    }

    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }

    buildTypes {
        applicationVariants.all { variant ->
            variant.outputs.each { output ->
                def appName = variant.applicationId.replace("ru.sedi.customer.", "")
                appName = ("SCC_" + appName).toUpperCase()
                def newName = appName + "_c" + defaultConfig.versionCode + "_v" + defaultConfig.versionName + "_" + ".apk"
                output.outputFileName = newName
            }
        }

        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }

    }
    compileOptions {
        targetCompatibility JavaVersion.VERSION_1_8
        sourceCompatibility JavaVersion.VERSION_1_8
    }
    lintOptions {
        disable "ResourceType"
    }


}

repositories {
    mavenCentral()
    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    maven {
        url 'https://maven.google.com/'
        name 'Google'
    }
    maven { url 'https://maven.fabric.io/public' }
}


dependencies {
    implementation files('libs/async_job.jar')
    implementation 'com.google.android.gms:play-services-maps:15.0.1'
    implementation 'com.android.support:appcompat-v7:26.1.0'
    implementation 'com.android.support:preference-v7:26.1.0'
    implementation 'com.android.support:cardview-v7:26.1.0'
    implementation 'com.google.android.gms:play-services-location:15.0.1'
    implementation 'org.slf4j:slf4j-simple:1.6.1'
    implementation 'com.loopj.android:android-async-http:1.4.9'
    implementation 'org.jsoup:jsoup:1.11.2'
    implementation 'me.drakeet.materialdialog:library:1.2.2'
    implementation 'com.squareup:otto:1.3.8'
    implementation 'org.apache.httpcomponents:httpcore:4.4.5'
    implementation 'com.google.code.gson:gson:2.8.2'
    implementation 'com.pnikosis:materialish-progress:1.2'
    implementation 'com.android.support:design:26.1.0'
    implementation 'com.android.support:support-v4:26.1.0'
    implementation 'com.github.MKergall.osmbonuspack:OSMBonusPack:v5.8.1'
    implementation 'com.github.jd-alexander:library:1.1.0'
    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
    implementation 'com.google.firebase:firebase-messaging:15.0.2'
    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
    implementation 'org.osmdroid:osmdroid-android:5.6.5'
    implementation 'com.squareup.picasso:picasso:2.5.2'
    implementation 'com.jakewharton:butterknife:8.8.1'
    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
    //Circle imageview
    implementation 'de.hdodenhof:circleimageview:2.2.0'
    //Popup image
    implementation 'com.github.chathuralakmal:AndroidImagePopup:1.2.1'

    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'

    testImplementation 'junit:junit:4.12'
    testImplementation 'org.robolectric:robolectric:3.7.1'
    testImplementation "org.robolectric:multidex:3.4.2"

    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
        transitive = true
    }
    implementation 'com.yandex.android:mobmetricalib:3.0.0'

}


apply plugin: 'com.google.gms.google-services'
